magento/magento2-page-builder#525: A Slider element is not responsive on the mobile view in the Firefox browser. - Fix for responsive behavior of the Column element in Firefox on mobile view. In case of width style nested columns of the main Column element and Slider element inside.

--- a/app/code/Magento/PageBuilder/view/frontend/web/css/source/content-type/column/_default.less
+++ b/app/code/Magento/PageBuilder/view/frontend/web/css/source/content-type/column/_default.less
@@ -21,5 +21,6 @@
     .pagebuilder-column {
         background-attachment: scroll !important;
         flex-basis: 100%;
+        max-width: 100%;
     }
 }
